# Epik

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
mcp/: README.md
mcp/src/epik_mcp/: raw.py
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
src/epik_gh/: __init__.py  branches.py  cache.py  errors.py  issues.py  labels.py  projects.py  prs.py  relationships.py  repos.py  runner.py  runs.py  server.py
tests/: test_branches.py  test_issues.py  test_labels.py  test_projects.py  test_prs.py  test_relationships.py  test_repos.py  test_runner.py  test_runs.py
